Fixing the propagation of spanId and parentId logic

--- a/zipkin-logger-example/pom.xml
+++ b/zipkin-logger-example/pom.xml
@@ -153,6 +153,12 @@
             <version>${mule.version}</version>
             <scope>provided</scope>
         </dependency>
+    <dependency>
+            <groupId>org.mule.modules</groupId>
+            <artifactId>mule-module-schedulers</artifactId>
+            <version>${mule.version}</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
 	<repositories>
