--- a/zipkin-logger-connector/pom.xml
+++ b/zipkin-logger-connector/pom.xml
@@ -5,7 +5,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.mule.modules</groupId>
 	<artifactId>zipkin-logger-connector</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<packaging>mule-module</packaging>
 	<name>Mule ZipkinLogger Anypoint Connector</name>
 
@@ -62,4 +62,12 @@
 			<layout>default</layout>
 		</repository>
 	</repositories>
+	<url>https://github.com/mulesoft-consulting/zipkin-connector</url>
+	<organization>
+		<name>MuleSoft consulting</name>
+	</organization>
+	<scm>
+		<url>https://github.com/mulesoft-consulting/zipkin-connector</url>
+		<developerConnection>michaelhyatt</developerConnection>
+	</scm>
 </project>
