--- a/zipkin-logger-example/pom.xml
+++ b/zipkin-logger-example/pom.xml
@@ -139,7 +139,7 @@
     <dependency>
             <groupId>org.mule.modules</groupId>
             <artifactId>zipkin-logger-connector</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <version>1.0.0</version>
         </dependency>
     <dependency>
             <groupId>org.mule.modules</groupId>
